# contributhon-2018-team2

./: .travis.yml  OpenStack api Team.md  README.rst  bnitech.rst  setup.cfg  test-requirements.txt  tox.ini
2018-08-31/: OpenStack 설치하기.rst
2018-09-06/: 2018-09-06 정리.rst  2018-09-06_git 사용하기.rst  2018-09-06_vm 외부 접속 설정하기.rst
2018-09-14/: 정리.rst
2018.08.31_SeongHyo/: 0831.rst
Seonghyo/: 0831.rst  0906.rst
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/JaeYeonLee0621/: 2018-08-31-OpenStack 설치하기.rst  index.rst
doc/source/Kang3498/: index.rst  test.rst
doc/source/Seonghyo/: 0831.rst  0906.rst  0914.rst  0920.rst  0920발표자료.pptx  index.rst
doc/source/api-team/: index.rst
doc/source/bnitech/: bnitech.rst  index.rst
