[metadata]
name = contributhon-2018-team
summary = Docs and I18n for KOSSLAB Contributhon 2018
description-file =
    README.rst
author = Ian Y. Choi
author-email = ianyrchoi@gmail.com
home-page = http://contributhon.kr

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build
